--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,8 +10,10 @@
 
 <body>
   <h2>Inicio</h2>
-  <a href="cadastrar.jsp">Cadastrar Produtos</a>
-  <a href="listar.jsp">Listar Produtos</a>
+  <div>
+    <a href="cadastrar.jsp">Cadastrar Produtos</a>
+    <a href="listar.jsp">Listar Produtos</a>
+  </div>
 </body>
 
 </html>
